# aegis-agent-management

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
aegis/: __init__.py
aegis/adapters/: llm_adapter.py  telegram_bot.py  web3_adapter.py
aegis/api/: routes.py  schemas.py  webhook.py
aegis/core/: __init__.py  arbiter.py  governor.py  hitl.py  kaizen.py  state_lock.py
aegis/policy/: engine.py  optimizer.py  rules.json
aegis/policy/backups/: rules_20260329_053849.json
tests/: test_arbiter.py  test_governor.py  test_hitl.py  test_kaizen.py  test_state_lock.py
